--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-a{
+.a{
   text-decoration: none;
   font-size: 35px;
   color: aliceblue;
