--- a/src/index.css
+++ b/src/index.css
@@ -49,17 +49,63 @@ body {
 }
 .nav1{
   display: flex;
-  gap: 75px;
+  gap: 50px;
   list-style: none;
   justify-content: center;
   align-items: center;
 }
 .a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
   text-decoration: none;
   font-size: 35px;
   color: aliceblue;
+  border-radius: 25px;
 }
-h1{
+.a:hover{
+  transition: 1s;
+  background-color:rgb(35, 99, 219) ;
+}
+.title{
   color: aliceblue;
   font-size: 50px;
+}
+h1{
+  color: black;
+}
+.section2{
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+}
+.btn{
+  width: 160px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 25px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: rgb(35, 99, 219);
+  color: aliceblue;
+}
+.btn:hover{
+  transition: 1s;
+  background-color: rgb(15, 31, 62);
+}
+.buttons{
+  gap: 10px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+.contador{
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column ;
+}
+.num{
+  font-size: 100px;
 }
