--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,9 @@ h1{
 .footer{
   display: flex;
   justify-content: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 .footerText{
   color: white;
@@ -169,8 +172,8 @@ footer{
   background-color: #222222;
   padding-left: 50px;
   padding-right: 50px;
-  height: 100px;
   width: 100%;
+  height: 100px;
 }
 .images{
   display: flex;
