--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,7 @@ h1{
   display: flex;
   justify-content: center;
   font-size: 25px;
+  height: 66vh;
 }
 .btn{
   width: 160px;
@@ -154,7 +155,7 @@ h1{
 .footer{
   display: flex;
   justify-content: center;
-  position: fixed;
+  position: relative;
   width: 100%;
   bottom: 0;
 }
