--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#TEXT{
+  font-size: 70px;
+}
 @property --rotate {
   syntax: "<angle>";
   initial-value: 132deg;
@@ -56,7 +58,7 @@ body {
 }
 .nav1{
   display: flex;
-  gap: 15px;
+  gap: 10px;
   list-style: none;
   justify-content: center;
   align-items: center;
